modules/casualos-eks/security_groups.tf

resource "aws_security_group" "allow_vpc_ssh" {
  name_prefix = "allow_vpc_ssh"
  vpc_id      = aws_vpc.default.id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}
